@@ -94,7 +94,8 @@ dillo-fltk2
 +- Improved FLTK library detection at configure time.
    Patch: Frank Gevaerts
 +- Bound Ctrl-R to reload.
-   Patch: Jeremy Henty
+   Made dialogs use font_factor (e.g. view source).
+   Patches: Jeremy Henty
 
  TODO:
 
